# fk_ik

./: README.md
fk/: CMakeLists.txt  check_motor_dir.py  drive_dxl.py  fk_cpp.cpp  fk_py.py  gravity.py  gravity_hold_log.csv  impedance_log.csv  inject.js  leader.urdf  leader_sub.py  main.cpp  pose_server.py  robot.urdf  run_fk.py  view_model.py
fk/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl  trigger_1.stl
leader-zmq/: a.out  dxl_pub  fk_ik_py.py  gravity  gravity.cpp  gravity.py  group_read  impedance_log.csv  leader.urdf  leader_pub.cpp  leader_sub.py  read_csv,py  read_dxl.cpp  read_dxl.py  readme.md  view_model.py
leader-zmq/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_5_1.stl
pyroki/: fk.py  fk_ik.py  ik.py  leader.urdf  pyroki_utils.py  utils.py
pyroki/meshes/: link_6_1.stl  trigger_1.stl
